Update progress bar position to fixed top for improved visibility

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -16,7 +16,7 @@
 
 .progressContainer {
     position: fixed;
-    top: 88px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 4px;
